- Bringing specific annotations to DTOs;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>